<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_refresh_article"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_article"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>