<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/search_activity">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPersoDark"
        android:text="@string/search_btn"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBox_search"
        app:layout_constraintTop_toBottomOf="@id/checkBox_search" />
...
