package com.riyad.p5.controller


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import com.riyad.p5.R
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class MainActivityTest3 {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

//    @Test
//    fun mainActivityTest3() {
//        val tabView = onView(
//            allOf(
//                withContentDescription("business"),
//                childAtPosition(
//                    childAtPosition(
//                        withId(R.id.main_tl),
//                        0
//                    ),
//                    2
//                ),
//                isDisplayed()
//            )
//        )
//        tabView.perform(click())
//
//        val linearLayout = onView(
//            allOf(
//                childAtPosition(
//                    allOf(
//                        withId(R.id.rv_article),
//                        withParent(withId(R.id.main_vp_articles))
//                    ),
//                    0
//                ),
//                isDisplayed()
//            )
//        )
//        linearLayout.perform(click())
//
//        val appCompatImageButton = onView(
//            allOf(
//                withContentDescription("Navigate up"),
//                childAtPosition(
//                    allOf(
//                        withId(R.id.tb_web_view),
//                        childAtPosition(
//                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
//                            0
//                        )
//                    ),
//                    1
//                ),
//                isDisplayed()
//            )
//        )
//        appCompatImageButton.perform(click())
//
//        val linearLayout2 = onView(
//            allOf(
//                childAtPosition(
//                    allOf(
//                        withId(R.id.rv_article),
//                        withParent(withId(R.id.main_vp_articles))
//                    ),
//                    2
//                ),
//                isDisplayed()
//            )
//        )
//        linearLayout2.perform(click())
//    }
//
//    private fun childAtPosition(
//        parentMatcher: Matcher<View>, position: Int
//    ): Matcher<View> {
//
//        return object : TypeSafeMatcher<View>() {
//            override fun describeTo(description: Description) {
//                description.appendText("Child at position $position in parent ")
//                parentMatcher.describeTo(description)
//            }
//
//            public override fun matchesSafely(view: View): Boolean {
//                val parent = view.parent
//                return parent is ViewGroup && parentMatcher.matches(parent)
//                        && view == parent.getChildAt(position)
//            }
//        }
//    }
}
